# uscrn

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  attrs.py  attrs.yml  get.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: api.rst  conf.py  fancy_version.py  index.md
docs/examples/: daily.ipynb  nrt.ipynb  qc.ipynb  select-sites.ipynb  stations.ipynb
tests/: test_attrs.py  test_data.py  test_get.py  test_util.py
uscrn/: __init__.py  _util.py  attrs.py  attrs.yml  data.py  get.py  util.py
