[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "uscrn"
authors = [{name = "zmoon", email = "zachary.moon@noaa.gov"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = "~=3.9"
dependencies = [
    "joblib",
    "numpy >=1.21",
    "pandas >=2,<3",
    "PyYAML",
    "requests",
    "xarray",
]

[project.urls]
Home = "https://github.com/zmoon/uscrn"
Source = "https://github.com/zmoon/uscrn"

[project.optional-dependencies]
test = [
    "fastparquet",
    "mypy",
    "netCDF4",
    "pandas-stubs",
    "pyarrow",
    "pytest",
    "pytest-cov",
]
dev = [
    "ipython",
]
doc = [
    "jupyterlab",
    "matplotlib",
    "myst-nb",
    "myst-parser",
    "sphinx",
    "sphinx-book-theme",
    "sphinx-click",
    "sphinx-copybutton",
]

[tool.flit.sdist]
exclude = [".github/", ".gitignore", "tests/", "docs/"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
exclude = ["^venv/"]
install_types = true
ignore_missing_imports = true
